Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/AActor.h

	
	DOTNET_EXPORT auto E_PROP_AActor_NetUpdateFrequency_GET(AActor* Ptr) { return Ptr->NetUpdateFrequency; }
	DOTNET_EXPORT void E_PROP_AActor_NetUpdateFrequency_SET(AActor* Ptr, float Value) { Ptr->NetUpdateFrequency = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_NetUpdateTime_GET(AActor* Ptr) { return Ptr->NetUpdateTime; }
	DOTNET_EXPORT void E_PROP_AActor_NetUpdateTime_SET(AActor* Ptr, float Value) { Ptr->NetUpdateTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_SpawnCollisionHandlingMethod_GET(AActor* Ptr) { return Ptr->SpawnCollisionHandlingMethod; }
	DOTNET_EXPORT void E_PROP_AActor_SpawnCollisionHandlingMethod_SET(AActor* Ptr, ESpawnActorCollisionHandlingMethod Value) { Ptr->SpawnCollisionHandlingMethod = Value; }
	DOTNET_EXPORT auto E_AActor_ActorHasTag(AActor* Self, char* Tag)
	{
		auto _p0 = ConvertFromManage_FName(Tag);
		return Self->ActorHasTag(_p0);
	}
	DOTNET_EXPORT auto E_AActor_ActorToWorld(AActor* Self)
	{
		return (INT_PTR) new FTransform(Self->ActorToWorld());
	}
	DOTNET_EXPORT auto E_AActor_AllowReceiveTickEventOnDedicatedServer(AActor* Self)
	{
		return Self->AllowReceiveTickEventOnDedicatedServer();
	}
	DOTNET_EXPORT auto E_AActor_BeginPlay(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->BeginPlay_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_CalculateComponentsBoundingBoxInLocalSpace(AActor* Self, bool bNonColliding)
	{
		auto _p0 = bNonColliding;
		return (INT_PTR) new FBox(Self->CalculateComponentsBoundingBoxInLocalSpace(_p0));
	}
	DOTNET_EXPORT auto E_AActor_CanEverTick(AActor* Self)
	{
		return Self->CanEverTick();
	}
	DOTNET_EXPORT auto E_AActor_CheckActorComponents(AActor* Self)
	{
		return ((E_PROTECTED_WRAP_AActor*)Self)->CheckActorComponents_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_CheckComponentInstanceName(AActor* Self, char* InName)
	{
		auto _p0 = ConvertFromManage_FName(InName);
		Self->CheckComponentInstanceName(_p0);
	}
	DOTNET_EXPORT auto E_AActor_CheckStillInWorld(AActor* Self)
	{
		return Self->CheckStillInWorld();
	}
	DOTNET_EXPORT auto E_AActor_ClearComponentOverlaps(AActor* Self)
	{
		Self->ClearComponentOverlaps();
	}
	DOTNET_EXPORT auto E_AActor_ClearCrossLevelReferences(AActor* Self)
	{
		Self->ClearCrossLevelReferences();
	}
	DOTNET_EXPORT auto E_AActor_ClearInstanceComponents(AActor* Self, bool bDestroyComponents)
	{
		auto _p0 = bDestroyComponents;
		Self->ClearInstanceComponents(_p0);
	}
	DOTNET_EXPORT auto E_AActor_Destroy(AActor* Self, bool bNetForce, bool bShouldModifyLevel)
	{
		auto _p0 = bNetForce;
		auto _p1 = bShouldModifyLevel;
		return Self->Destroy(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_DestroyConstructedComponents(AActor* Self)
	{
		Self->DestroyConstructedComponents();
	}
	DOTNET_EXPORT auto E_AActor_Destroyed(AActor* Self)
	{
		Self->Destroyed();
	}
	DOTNET_EXPORT auto E_AActor_DestroyNetworkActorHandled(AActor* Self)
	{
		return Self->DestroyNetworkActorHandled();
	}
	DOTNET_EXPORT auto E_AActor_DetachRootComponentFromParent(AActor* Self, bool bMaintainWorldPosition)
	{
		auto _p0 = bMaintainWorldPosition;
		Self->DetachRootComponentFromParent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_DisableComponentsSimulatePhysics(AActor* Self)
	{
		Self->DisableComponentsSimulatePhysics();
	}
	DOTNET_EXPORT auto E_AActor_DispatchBeginPlay(AActor* Self)
	{
		Self->DispatchBeginPlay();
	}
	DOTNET_EXPORT auto E_AActor_ExchangeNetRoles(AActor* Self, bool bRemoteOwner)
	{
		auto _p0 = bRemoteOwner;
		Self->ExchangeNetRoles(_p0);
	}
	DOTNET_EXPORT auto E_AActor_FlushNetDormancy(AActor* Self)
	{
		Self->FlushNetDormancy();
	}
	DOTNET_EXPORT auto E_AActor_ForceNetRelevant(AActor* Self)
	{
		Self->ForceNetRelevant();
	}
	DOTNET_EXPORT auto E_AActor_ForceNetUpdate(AActor* Self)
	{
		Self->ForceNetUpdate();
	}
	DOTNET_EXPORT auto E_AActor_ForcePropertyCompare(AActor* Self)
	{
		Self->ForcePropertyCompare();
	}
	DOTNET_EXPORT auto E_AActor_GatherCurrentMovement(AActor* Self)
	{
		Self->GatherCurrentMovement();
	}
	DOTNET_EXPORT auto E_AActor_GetActorEnableCollision(AActor* Self)
	{
		return Self->GetActorEnableCollision();
	}
	DOTNET_EXPORT auto E_AActor_GetActorForwardVector(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorForwardVector());
	}
	DOTNET_EXPORT auto E_AActor_GetActorLocation(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorLocation());
	}
	DOTNET_EXPORT auto E_AActor_GetActorQuat(AActor* Self)
	{
		return (INT_PTR) new FQuat(Self->GetActorQuat());
	}
	DOTNET_EXPORT auto E_AActor_GetActorRelativeScale3D(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorRelativeScale3D());
	}
	DOTNET_EXPORT auto E_AActor_GetActorRightVector(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorRightVector());
	}
	DOTNET_EXPORT auto E_AActor_GetActorRotation(AActor* Self)
	{
		return (INT_PTR) new FRotator(Self->GetActorRotation());
	}
	DOTNET_EXPORT auto E_AActor_GetActorScale(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorScale());
	}
	DOTNET_EXPORT auto E_AActor_GetActorScale3D(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorScale3D());
	}
	DOTNET_EXPORT auto E_AActor_GetActorTickInterval(AActor* Self)
	{
		return Self->GetActorTickInterval();
	}
	DOTNET_EXPORT auto E_AActor_GetActorTimeDilation(AActor* Self)
	{
		return Self->GetActorTimeDilation();
	}
	DOTNET_EXPORT auto E_AActor_GetActorTransform(AActor* Self)
	{
		return (INT_PTR) new FTransform(Self->GetActorTransform());
	}
	DOTNET_EXPORT auto E_AActor_GetActorUpVector(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorUpVector());
	}
	DOTNET_EXPORT auto E_AActor_GetAttachParentSocketName(AActor* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetAttachParentSocketName());
	}
	DOTNET_EXPORT auto E_AActor_GetComponentsBoundingBox(AActor* Self, bool bNonColliding)
	{
		auto _p0 = bNonColliding;
		return (INT_PTR) new FBox(Self->GetComponentsBoundingBox(_p0));
	}
	DOTNET_EXPORT auto E_AActor_GetComponentsBoundingCylinder(AActor* Self, float CollisionRadius, float CollisionHalfHeight, bool bNonColliding)
	{
		auto _p0 = CollisionRadius;
		auto _p1 = CollisionHalfHeight;
		auto _p2 = bNonColliding;
		Self->GetComponentsBoundingCylinder(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_GetComponentsCollisionResponseToChannel(AActor* Self, ECollisionChannel Channel)
	{
		auto _p0 = Channel;
		return Self->GetComponentsCollisionResponseToChannel(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetGameTimeSinceCreation(AActor* Self)
	{
		return Self->GetGameTimeSinceCreation();
	}
	DOTNET_EXPORT auto E_AActor_GetHumanReadableName(AActor* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetHumanReadableName());
	}
	DOTNET_EXPORT auto E_AActor_GetInputAxisValue(AActor* Self, char* InputAxisName)
	{
		auto _p0 = ConvertFromManage_FName(InputAxisName);
		return Self->GetInputAxisValue(_p0);
	}
	DOTNET_EXPORT auto E_AActor_GetIsReplicated(AActor* Self)
	{
		return Self->GetIsReplicated();
	}
	DOTNET_EXPORT auto E_AActor_GetLastRenderTime(AActor* Self)
	{
		return Self->GetLastRenderTime();
	}
	DOTNET_EXPORT auto E_AActor_GetLifeSpan(AActor* Self)
	{
		return Self->GetLifeSpan();
	}
	DOTNET_EXPORT auto E_AActor_GetNetDriverName(AActor* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetNetDriverName());
	}
	DOTNET_EXPORT auto E_AActor_GetNetMode(AActor* Self)
	{
		return Self->GetNetMode();
	}
	DOTNET_EXPORT auto E_AActor_GetPlacementExtent(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetPlacementExtent());
	}
	DOTNET_EXPORT auto E_AActor_GetRemoteRole(AActor* Self)
	{
		return Self->GetRemoteRole();
	}
	DOTNET_EXPORT auto E_AActor_GetSimpleCollisionCylinder(AActor* Self, float CollisionRadius, float CollisionHalfHeight)
	{
		auto _p0 = CollisionRadius;
		auto _p1 = CollisionHalfHeight;
		Self->GetSimpleCollisionCylinder(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_GetSimpleCollisionCylinderExtent(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetSimpleCollisionCylinderExtent());
	}
	DOTNET_EXPORT auto E_AActor_GetSimpleCollisionHalfHeight(AActor* Self)
	{
		return Self->GetSimpleCollisionHalfHeight();
	}
	DOTNET_EXPORT auto E_AActor_GetSimpleCollisionRadius(AActor* Self)
	{
		return Self->GetSimpleCollisionRadius();
	}
	DOTNET_EXPORT auto E_AActor_GetTickableWhenPaused(AActor* Self)
	{
		return Self->GetTickableWhenPaused();
	}
	DOTNET_EXPORT auto E_AActor_GetTransform(AActor* Self)
	{
		return (INT_PTR) new FTransform(Self->GetTransform());
	}
	DOTNET_EXPORT auto E_AActor_GetVelocity(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->GetVelocity());
	}
	DOTNET_EXPORT auto E_AActor_HasActiveCameraComponent(AActor* Self)
	{
		return Self->HasActiveCameraComponent();
	}
	DOTNET_EXPORT auto E_AActor_HasActivePawnControlCameraComponent(AActor* Self)
	{
		return Self->HasActivePawnControlCameraComponent();
	}
	DOTNET_EXPORT auto E_AActor_HasActorBegunPlay(AActor* Self)
	{
		return Self->HasActorBegunPlay();
	}